Método crear realizado

--- a/Lenguajes.dev/ms_Usuarios/src/main/resources/application.properties
+++ b/Lenguajes.dev/ms_Usuarios/src/main/resources/application.properties
@@ -1,1 +1,8 @@
-
+#PROPIEDADES MONGODB
+#Se crea las tablas de forma automática
+spring.data.mongodb.uri=mongodb://localhost:27017/mongo_login
+#Para modificar la base de datos si modificamos algo en nuestro entity (sin necesidad de borrar y crear)
+ spring.data.mongodb.auto-index-creation=true
+ 
+ #Definicion puerto (Quitar cuando ponga eureka)
+server.port=8060
